# simple_mobile_robot

./: .gitignore  README.md
src/localization/: CMakeLists.txt  README.md  package.xml
src/localization/config/: localization.yaml
src/localization/include/localization/: geometry_utils.hpp  kalman_filter.hpp  likelihood_field.hpp  particle_filter.hpp  scan_matcher.hpp
src/localization/launch/: kalman_localization.launch.py  particle_filter_localization.launch.py
src/localization/src/: geometry_utils.cpp  kalman_filter.cpp  kalman_localization_node.cpp  likelihood_field.cpp  localization_node.cpp  particle_filter.cpp  particle_filter_localization_node.cpp  scan_matcher.cpp
src/mapping/: CMakeLists.txt  README.md  package.xml
src/mapping/config/: mapping.yaml
src/mapping/experiments/: occupancy_mapper_simple_count_method.cpp
src/mapping/include/mapping/: occupancy_mapper.hpp
src/mapping/launch/: mapping.launch.py
src/mapping/maps/: maze_map.pgm  maze_map.yaml
src/mapping/scripts/: generate_pgm_map.py
src/mapping/src/: occupancy_mapper.cpp  occupancy_mapper_node.cpp  occupancy_mapper_simple_count_method.cpp  test_node.cpp
src/motion_planning/: CMakeLists.txt  README.md  package.xml
src/motion_planning/config/: motion_planning.yaml
src/motion_planning/include/motion_planning/: a_star_planner.hpp  motion_planner.hpp  path_resampler.hpp  path_shortcutter.hpp  path_types.hpp  spline_path_smoother.hpp
src/motion_planning/launch/: motion_planning.launch.py
src/motion_planning/src/: a_star_planner.cpp  motion_planner.cpp  motion_planning_node.cpp  path_resampler.cpp  path_shortcutter.cpp  spline_path_smoother.cpp
src/my_bot/: CMakeLists.txt  README.md  package.xml
src/my_bot/launch/: bringup_simulation.launch.py  spawn_robot.launch.py
src/my_bot/urdf/: my_robot.urdf
src/my_bot/worlds/: my_world.sdf
src/path_follow_control/: CMakeLists.txt  README.md  package.xml
src/path_follow_control/config/: path_follow_control.yaml
src/path_follow_control/include/path_follow_control/: path_follow_controller.hpp  path_types.hpp
src/path_follow_control/launch/: path_follow_control.launch.py
src/path_follow_control/src/: path_follow_control_node.cpp  path_follow_controller.cpp
src/simulation/: CMakeLists.txt  README.md  package.xml
src/simulation/config/: odometry_noise.yaml
src/simulation/launch/: bringup_simulation.launch.py  spawn_robot.launch.py
src/simulation/models/simple_room/: model.config  model.sdf
src/simulation/src/: ground_truth_pose_publisher.cpp  odometry_noise_node.cpp
src/simulation/urdf/: my_robot.urdf
src/simulation/worlds/: my_world.sdf
src/slam/: CMakeLists.txt  README.md  package.xml
src/slam/config/: slam.yaml
src/slam/include/slam/: loop_closure.hpp  simple_slam.hpp  simple_slam_types.hpp  slam_localization.hpp  slam_mapper.hpp
src/slam/launch/: simple_slam.launch.py
src/slam/src/: loop_closure.cpp  simple_slam.cpp  simple_slam_node.cpp  slam_localization.cpp  slam_mapper.cpp
src/slam_fastslam/: CMakeLists.txt  README.md  package.xml
src/slam_fastslam/config/: fastslam.yaml
src/slam_fastslam/include/slam_fastslam/: fastslam.hpp  fastslam_particle.hpp  fastslam_types.hpp  likelihood_field.hpp  motion_model.hpp  particle_resampler.hpp  scan_scorer.hpp  utils.hpp
src/slam_fastslam/launch/: fastslam.launch.py
src/slam_fastslam/src/: fastslam.cpp  fastslam_node.cpp  likelihood_field.cpp  motion_model.cpp  particle_resampler.cpp  scan_scorer.cpp  utils.cpp
src/slam_fastslam/test/: test_fastslam.cpp  test_likelihood_field.cpp  test_particle_resampler.cpp  test_scan_scorer.cpp
